[gd_scene load_steps=2 format=3 uid="uid://dkw13ogaxuxd2"]

[ext_resource type="Script" path="res://scenes/enemies/boss/bluster_turel.gd" id="1_l4dtl"]

[node name="blusterTurel" type="Node2D"]
script = ExtResource("1_l4dtl")

[node name="laserSpawnPoint" type="Marker2D" parent="."]

[node name="blusterRate" type="Timer" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 120)

[connection signal="timeout" from="blusterRate" to="." method="_on_bluster_rate_timeout"]
